--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "chart.js": "^3.7.0",
     "idb": "^6.1.5",
     "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
